Fix Turn icon gaps

--- a/styles/Turn.module.css
+++ b/styles/Turn.module.css
@@ -51,7 +51,7 @@
   line-height: 1.5em;
   border-radius: calc(var(--fillet) * 2);
 
-  left: 50%;
+  left: calc(50% - 0.5em / 2);
   top: 50%;
   transform: translate(-50%, -50%);
 
@@ -77,6 +77,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.tbody .th {
+  padding: 0 0.5em 0 0;
 }
 
 .topLeft {
